cmake_minimum_required(VERSION 3.26)
project(CPP_10Hour_Course)

set(CMAKE_CXX_STANDARD 17)
add_executable(Array_vs_Vector_vs_STL_Array "Array_vs_Vector_vs_STL_Array/main.cpp")
add_executable(Base_Classes_and_Subclasses_Inheritance "Base_Classes_and_Subclasses_Inheritance/main.cpp")
add_executable(bool_Data_Type "bool_Data_Type/main.cpp")
add_executable(Break_and_Continue "Break_and_Continue/main.cpp")
add_executable(char_Data_Type "char_Data_Type/main.cpp")
add_executable(Classes_and_Object "Classes_and_Object/main.cpp")
add_executable(Class_Across_Files "Class_Across_Files/main.cpp")
add_executable(Conditional_Operator "Conditional_Operator/main.cpp")
add_executable(Constant_const_macro_and_enum "Constant_const_macro_and_enum/main.cpp")
add_executable(Constructors_and_Destructors "Constructors_and_Destructors/main.cpp")
add_executable(Const_Modifier "Const_Modifier/main.cpp")
add_executable(Control_Flow "Control_Flow/main.cpp")
add_executable(Conventions_and_Style_Guides "Conventions_and_Style_Guides/main.cpp")
add_executable(Creating_a_Class "Creating_a_Class/main.cpp")
add_executable(Creating_a_Function_Template "Creating_a_Function_Template/main.cpp")
add_executable(Creating_a_Guessing_Game "Creating_a_Guessing_Game/main.cpp")
add_executable(Creating_a_Menu "Creating_a_Menu/main.cpp")
add_executable(Creating_a_Namespace "Creating_a_Namespace/main.cpp")
add_executable(Creating_a_Simple_Makefile "Creating_a_Simple_Makefile/main.cpp")
add_executable(Creating_a_Struct "Creating_a_Struct/main.cpp")
add_executable(Creating_a_Vector "Creating_a_Vector/main.cpp")
add_executable(Creating_Custom_Functions "Creating_Custom_Functions/main.cpp")
add_executable(Creating_Void_Functions "Creating_Void_Functions/main.cpp")
add_executable(Default_Arguments "Default_Arguments/main.cpp")
add_executable(Do_While_Loop "Do_While_Loop/main.cpp")
add_executable(Encapsulation "Encapsulation/main.cpp")
add_executable(Escape_Sequences "Escape_Sequences/main.cpp")
add_executable(Fill_Array_from_Input "Fill_Array_from_Input/main.cpp")
add_executable(Floating_Point_Numbers "Floating_Point_Numbers/main.cpp")
add_executable(For_Loops_How_to_Calculate_Factorial "For_Loops_How_to_Calculate_Factorial/main.cpp")
add_executable(Friend_Functions_and_Operator_Overloading "Friend_Functions_and_Operator_Overloading/main.cpp")
add_executable(Functions_and_Constructors "Functions_and_Constructors/main.cpp")
add_executable(Function_Overloading_Examples "Function_Overloading_Examples/main.cpp")
add_executable(Getters_and_Setters "Getters_and_Setters/main.cpp")
add_executable(get_line_for_Strings "get_line_for_Strings/main.cpp")
add_executable(Hex_and_Octal "Hex_and_Octal/main.cpp")
add_executable(If_Statement_Practice "If_Statement_Practice/main.cpp")
add_executable(Inheritance_and_Polymorphism "Inheritance_and_Polymorphism/main.cpp")
add_executable(Integral_Data_Types_and_Signed_vs_Unsigned "Integral_Data_Types_and_Signed_vs_Unsigned/main.cpp")
add_executable(Integral_Data_Types_sizeof_limit "Integral_Data_Types_sizeof_limit/main.cpp")
add_executable(Intro_to_Arrays_and_Vectors "Intro_to_Arrays_and_Vectors/main.cpp")
add_executable(Intro_to_Constructors "Intro_to_Constructors/main.cpp")
add_executable(Intro_to_Creating_Custom_Functions "Intro_to_Creating_Custom_Functions/main.cpp")
add_executable(Intro_to_C_Data_Types "Intro_to_C_Data_Types/main.cpp")
add_executable(Intro_to_Functions "Intro_to_Functions/main.cpp")
add_executable(Intro_to_Function_Overloading "Intro_to_Function_Overloading/main.cpp")
add_executable(Intro_to_Function_Templates "Intro_to_Function_Templates/main.cpp")
add_executable(Intro_to_IO_Streams "Intro_to_IO_Streams/main.cpp")
add_executable(Intro_to_Loops "Intro_to_Loops/main.cpp")
add_executable(Intro_to_Multifile_Compilation "Intro_to_Multifile_Compilation/main.cpp")
add_executable(Intro_to_Namespaces "Intro_to_Namespaces/main.cpp")
add_executable(Intro_to_Object_Oriented_Programming "Intro_to_Object_Oriented_Programming/main.cpp")
add_executable(Intro_to_Operator_Overloading "Intro_to_Operator_Overloading/main.cpp")
add_executable(Intro_to_Our_App "Intro_to_Our_App/main.cpp")
add_executable(Intro_to_Structs "Intro_to_Structs/main.cpp")
add_executable(Intro_to_Vectors "Intro_to_Vectors/main.cpp")
add_executable(Literals "Literals/main.cpp")
add_executable(Logical_and_Comparison_Operators "Logical_and_Comparison_Operators/main.cpp")
add_executable(Makefiles "Makefiles/main.cpp")
add_executable(Multidimensional_Arrays_and_Nested_Vectors "Multidimensional_Arrays_and_Nested_Vectors/main.cpp")
add_executable(Multifile_Compilation "Multifile_Compilation/main.cpp")
add_executable(Numeric_Functions "Numeric_Functions/main.cpp")
add_executable(Operator_Overloading__and_ "Operator_Overloading__and_/main.cpp")
add_executable(Operator_Precedence_and_Associativity "Operator_Precedence_and_Associativity/main.cpp")
add_executable(Overloading_Function_Templates "Overloading_Function_Templates/main.cpp")
add_executable(Overloading_Insert_and_Extraction_Operators "Overloading_Insert_and_Extraction_Operators/main.cpp")
add_executable(Passing_Arrays_to_Functions "Passing_Arrays_to_Functions/main.cpp")
add_executable(Passing_Vectors_to_Functions "Passing_Vectors_to_Functions/main.cpp")
add_executable(Pass_by_Reference_and_Pass_By_Value "Pass_by_Reference_and_Pass_By_Value/main.cpp")
add_executable(Polymorphism "Polymorphism/main.cpp")
add_executable(Pow_Function "Pow_Function/main.cpp")
add_executable(Range_Based_for_Loop "Range_Based_for_Loop/main.cpp")
add_executable(Readings_from_Files_with_ifstream "Readings_from_Files_with_ifstream/main.cpp")
add_executable(Refactoring_IO_to_Function_Call_and_Testing "Refactoring_IO_to_Function_Call_and_Testing/main.cpp")
add_executable(Refactor_Guessing_Game_to_Use_Templatized_Array "Refactor_Guessing_Game_to_Use_Templatized_Array/main.cpp")
add_executable(Refactor_Guessing_Game_to_Use_Vectors "Refactor_Guessing_Game_to_Use_Vectors/main.cpp")
add_executable(Reviewing_Key_Concepts "Reviewing_Key_Concepts/main.cpp")
add_executable(Saving_High_Scores_to_File "Saving_High_Scores_to_File/main.cpp")
add_executable(Static_Data_Members "Static_Data_Members/main.cpp")
add_executable(STL_Array "STL_Array/main.cpp")
add_executable(STL_Arrays_in_Practice "STL_Arrays_in_Practice/main.cpp")
add_executable(String_Class_and_C_Strings "String_Class_and_C_Strings/main.cpp")
add_executable(String_Modifier_Methods "String_Modifier_Methods/main.cpp")
add_executable(String_Operation_Methods "String_Operation_Methods/main.cpp")
add_executable(Swap_Function_with_Pass_by_Reference "Swap_Function_with_Pass_by_Reference/main.cpp")
add_executable(Switch_Statement_and_Enum "Switch_Statement_and_Enum/main.cpp")
add_executable(User_Input_with_cin "User_Input_with_cin/main.cpp")
add_executable(Using_and_Array_to_Keep_Track_of_Guessing "Using_and_Array_to_Keep_Track_of_Guessing/main.cpp")
add_executable(Using_Variables_with_cout "Using_Variables_with_cout/main.cpp")
add_executable(Variable_Declaration_and_Initialization "Variable_Declaration_and_Initialization/main.cpp")
add_executable(While_Loop_and_Factorial_Calculator "While_Loop_and_Factorial_Calculator/main.cpp")
add_executable(Working_with_Arrays "Working_with_Arrays/main.cpp")
add_executable(Working_with_Objects "Working_with_Objects/main.cpp")
add_executable(Writing_to_Files_with_ofstream "Writing_to_Files_with_ofstream/main.cpp")
